# nsf-presenter-rs

./: .gitignore  Cargo.toml  PERSPECTIVE_VIEW_PLAN.md  PLAYER_MODE_PLAN.md  README.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.7.1.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.8.1.md  build.rs
crates/nsf-common/: Cargo.toml
crates/nsf-common/src/: lib.rs
crates/nsf-common/src/emulator/: emulator.rs
crates/nsf-common/src/player/: audio.rs  mod.rs  player_thread.rs  playlist.rs
crates/nsf-common/src/visualization/perspective/: channel_strip.rs  grid.rs  keyboard.rs  mod.rs  notes.rs  transform.rs
crates/nsf-player/: Cargo.toml  build.rs
crates/nsf-player/src/: config.rs  gui.rs  main.rs
crates/nsf-player/src/slint/: player.slint  visualization.slint
crates/nsf-presenter/: Cargo.toml
crates/nsf-presenter/src/: cli.rs  main.rs
crates/nsf-presenter/src/gui/: mod.rs  render_thread.rs
crates/nsf-presenter/src/renderer/: mod.rs
crates/nsf-presenter/src/video_builder/: mod.rs
scripts/: package-release.ps1
src/: main.rs
src/emulator/: config.rs
src/gui/: mod.rs  player_window.rs
src/gui/slint/: main.slint  visualization.slint
src/player/: audio.rs  mod.rs  player_thread.rs  playlist.rs
src/renderer/: mod.rs
src/video_builder/: encoding.rs
