[workspace]
members = ["crates/nsf-common", "crates/nsf-presenter", "crates/nsf-player"]
resolver = "2"

[profile.dev]
overflow-checks = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

# rusticnes-* are vendored under external/. The path overrides ensure that any
# transitive dependency that pulls them from GitHub uses the local copy.
[patch."https://github.com/zeta0134/rusticnes-core"]
rusticnes-core = { path = "external/rusticnes-core" }

[patch."https://github.com/zeta0134/rusticnes-ui-common"]
rusticnes-ui-common = { path = "external/rusticnes-ui-common" }
