[package]
name = "nsf-common"
version = "0.7.0"
edition = "2021"

[dependencies]
rusticnes-core = { path = "../../external/rusticnes-core" }
rusticnes-ui-common = { path = "../../external/rusticnes-ui-common" }
anyhow = "1.0.75"
arc-swap = "1.7"
cpal = "0.15"
csscolorparser = "0.6.2"
encoding_rs = "0.8.32"
glob = "0.3.1"
ringbuf = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
